--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "private": "true",
   "version": "1.0.11",
   "scripts": {
-    "simulate": "node src/simulate.mjs"
+    "simulate": "node src/simulate.mjs",
+    "start": "react-scripts start",
+    "build": "DISABLE_ESLINT_PLUGIN=true react-scripts build"
   },
   "dependencies": {
     "@cosmjs/amino": "^0.31.0",
@@ -11,20 +13,41 @@
     "@cosmjs/crypto": "^0.31.0",
     "@cosmjs/proto-signing": "^0.31.0",
     "@cosmjs/stargate": "^0.31.0",
-    "ethers": "^5.0.15",
-    "@oraichain/common-contracts-sdk": "^1.0.30",
     "@oraichain/common-contracts-build": "^1.0.27",
+    "@oraichain/common-contracts-sdk": "^1.0.30",
     "@oraichain/oraidex-contracts-build": "^1.0.14",
     "@oraichain/oraidex-contracts-sdk": "^1.0.22",
-    "dotenv": "^16.0.3"
+    "ansi_up": "^6.0.2",
+    "dompurify": "^3.0.5",
+    "dotenv": "^16.0.3",
+    "marked": "^9.0.3",
+    "notebookjs": "^0.6.7",
+    "prismjs": "^1.29.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "web-vitals": "^2.1.4"
   },
   "devDependencies": {
     "@oraichain/cw-simulate": "^2.8.63",
-    "@types/jest": "^29.5.2",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
     "@types/node": "^18.15.8",
-    "jest": "^29.5.0",
-    "esbuild": "^0.19.3",
-    "esbuild-jest": "^0.5.0",
+    "react-scripts": "5.0.1",
     "typescript": "^5.2.2"
+  },
+  "browser": {
+    "child_process": false
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
