--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,8 @@
     "compilerOptions": {
         "target": "ESNext",
         "lib": [
+            "dom",
+            "dom.iterable",
             "ESNext",
         ],
         "module": "ESNext",
@@ -16,7 +18,15 @@
         "typeRoots": [
             "node_modules/@types"
         ],
+        "jsx": "react-jsx",
         "allowJs": true,
         "esModuleInterop": true
-    }
+    },
+    "include": [
+        "src",
+        "src/**/*"
+    ],
+    "exclude": [
+        "node_modules",
+    ]
 }
