--- a/package.json
+++ b/package.json
@@ -4,35 +4,34 @@
   "version": "1.0.11",
   "scripts": {
     "simulate": "node src/simulate.mjs",
-    "start": "react-scripts start",
-    "build": "DISABLE_ESLINT_PLUGIN=true react-scripts build"
+    "start": "GENERATE_SOURCEMAP=false && react-app-rewired start",
+    "build": "GENERATE_SOURCEMAP=false && DISABLE_ESLINT_PLUGIN=true react-app-rewired build"
   },
   "dependencies": {
-    "@cosmjs/amino": "^0.31.0",
-    "@cosmjs/cosmwasm-stargate": "^0.31.0",
-    "@cosmjs/crypto": "^0.31.0",
-    "@cosmjs/proto-signing": "^0.31.0",
-    "@cosmjs/stargate": "^0.31.0",
-    "@oraichain/common-contracts-build": "^1.0.27",
+    "@codemirror/lang-javascript": "^6.2.1",
+    "@oraichain/common-contracts-build": "^1.0.32",
     "@oraichain/common-contracts-sdk": "^1.0.30",
+    "@oraichain/cw-simulate": "^2.8.66",
     "@oraichain/oraidex-contracts-build": "^1.0.14",
     "@oraichain/oraidex-contracts-sdk": "^1.0.22",
     "ansi_up": "^6.0.2",
+    "codemirror": "^6.0.1",
     "dompurify": "^3.0.5",
     "dotenv": "^16.0.3",
     "marked": "^9.0.3",
     "notebookjs": "^0.6.7",
-    "prismjs": "^1.29.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "web-vitals": "^2.1.4"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@oraichain/cw-simulate": "^2.8.63",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
     "@types/node": "^18.15.8",
+    "buffer": "^6.0.3",
+    "crypto-browserify": "^3.12.0",
+    "https-browserify": "^1.0.0",
+    "react-app-rewired": "^2.2.1",
     "react-scripts": "5.0.1",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
     "typescript": "^5.2.2"
   },
   "browser": {
