--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,7 @@
         "moduleResolution": "node",
         "isolatedModules": false,
         "skipLibCheck": true,
-        "sourceMap": true,
+        "sourceMap": false,
         "experimentalDecorators": true,
         "emitDecoratorMetadata": true,
         "declaration": false,
@@ -20,7 +20,9 @@
         ],
         "jsx": "react-jsx",
         "allowJs": true,
-        "esModuleInterop": true
+        "esModuleInterop": true,
+        "allowSyntheticDefaultImports": true,
+        "resolveJsonModule": true
     },
     "include": [
         "src",
