--- a/package.json
+++ b/package.json
@@ -21,10 +21,13 @@
     "marked": "^9.0.3",
     "notebookjs": "^0.6.7",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-select": "^5.7.5"
   },
   "devDependencies": {
     "@types/node": "^18.15.8",
+    "@types/react": "^18.0.34",
+    "@types/react-dom": "^18.0.11",
     "buffer": "^6.0.3",
     "crypto-browserify": "^3.12.0",
     "https-browserify": "^1.0.0",
