add interchain dao

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@oraichain/common-contracts-build": "^1.0.32",
     "@oraichain/common-contracts-sdk": "^1.0.30",
     "@oraichain/cw-simulate": "^2.8.66",
+    "@oraichain/dao-contracts-sdk": "^1.0.4",
     "@oraichain/oraidex-contracts-build": "^1.0.14",
     "@oraichain/oraidex-contracts-sdk": "^1.0.22",
     "ansi_up": "^6.0.2",
