--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@codemirror/lang-javascript": "^6.2.1",
     "@oraichain/common-contracts-build": "^1.0.32",
     "@oraichain/common-contracts-sdk": "^1.0.30",
+    "@oraichain/cosmwasm-vm-zk-web": "^0.0.2",
     "@oraichain/cw-simulate": "^2.8.67",
     "@oraichain/dao-contracts-sdk": "^1.0.4",
     "@oraichain/oraidex-contracts-build": "^1.0.14",
@@ -19,7 +20,8 @@
     "codemirror": "^6.0.1",
     "dompurify": "^3.0.5",
     "dotenv": "^16.0.3",
-    "marked": "^9.0.3",
+    "highlight.js": "^11.8.0",
+    "markdown-it": "^13.0.2",
     "notebookjs": "^0.6.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
