--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-select": "^5.7.5"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@types/node": "^18.15.8",
     "@types/react": "^18.0.34",
     "@types/react-dom": "^18.0.11",
