--- a/package.json
+++ b/package.json
@@ -24,8 +24,7 @@
     "markdown-it": "^13.0.2",
     "notebookjs": "^0.6.7",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-select": "^5.7.5"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
