--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@oraichain/dao-contracts-sdk": "^1.0.4",
     "@oraichain/oraidex-contracts-build": "^1.0.14",
     "@oraichain/oraidex-contracts-sdk": "^1.0.22",
-    "@oraichain/notebookjs": "^0.1.2"
+    "@oraichain/notebookjs": "^0.1.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
